--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,45 @@
+:root {
+  --color-secondary: #203040;
+  --color-white: #fff;
+  --color-black: rgba(0, 0, 0, 0.87);
+  --color-gold: #000;
+  --bg-color: #efefef;
+}
+
 body {
   font-weight: 500;
   font-size: 1.5rem;
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
 }
-main {
-  position: relative;
-}
+
 .text-capitalize {
   text-transform: capitalize;
 }
 /* Layout */
 .ant-layout-content.bg-dark-grey {
-  background-color: #151515;
+  background-color: var(--bg-color);
   min-height: calc(100vh - 110px);
-}
-.ant-layout-content .filter-list {
-  margin: 16px 0;
+  display: flex;
+  justify-content: center;
 }
 .ant-layout-content h2 {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
 }
-.ant-layout-header.navbar {
+.ant-layout-header .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .ant-layout-header,
 .ant-layout-footer {
-  padding: 15px 50px !important;
+  padding: 15px 0 !important;
   height: unset !important;
 }
 
 .ant-layout-header,
 .ant-layout-footer {
-  background: #030303 !important;
+  background: var(--color-secondary) !important;
   font-family: 'Open Sans', sans-serif;
   color: #fff !important;
 }
@@ -44,153 +49,58 @@ main {
   margin-bottom: 0;
   font-size: 18px;
 }
-.container {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 50px;
-}
-/* Todo List */
+
+/* Add todo btn*/
 .ant-btn.add-icon {
-  background: #e3cbd2;
-  color: #333333;
+  background: var(--color-white);
+  color: var(--color-secondary);
   display: flex;
   align-items: center;
   justify-content: center;
-  border: none;
+  border: 1px solid var(--color-white);
+  border-radius: 8px;
   min-height: 36px;
 }
-.add-icon:focus,
-.add-icon:hover {
-  background: #efbebe;
-  color: #fff;
-  border-color: #efbebe;
+.ant-btn.add-icon:focus,
+.ant-btn.add-icon:hover {
+  color: var(--color-secondary);
+
+  border-color: rgb(86, 128, 167) !important;
+  box-shadow: 0 0 0 2px rgba(115, 180, 240, 0.761) !important;
 }
 
-.empty-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.15rem 0.75rem;
-  min-height: 30px;
-  color: #fff;
-}
+/* helper class */
 
-.ant-list-item,
-.ant-list-item-meta-description,
-.ant-list-item-meta-content {
-  color: #fff;
+.container {
+  width: min(90%, 90em);
+  margin-inline: auto;
 }
-
-/* Modal Styles */
-.action-icon {
-  padding: 0.5rem;
+/*  filter list */
+.filter-row .filter-label {
+  color: var(--color-black);
+  margin: 1rem 0;
 }
-.action-icon:hover {
-  cursor: pointer;
+.filter-row
+  .ant-radio-group-solid
+  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
+  background: var(--color-secondary);
+  border-color: var(--color-secondary);
 }
-
-.ant-modal-mask {
-  background-color: rgba(0, 0, 0, 0.15) !important;
+.filter-row
+  .ant-radio-group-solid
+  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
+  background: #3b4b5c;
+  border-color: var(--color-secondary);
 }
-.ant-modal-header .ant-modal-title {
-  font-family: 'Open Sans', sans-serif;
+.filter-row
+  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before,
+.filter-row
+  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover::before {
+  background-color: var(--color-secondary);
 }
-
-.ant-modal-content,
-.ant-modal-header,
-.ant-modal-footer {
-  background-color: #d7c0c7 !important;
+.filter-row .ant-radio-button-wrapper:hover {
+  color: var(--color-secondary);
 }
-.ant-picker,
-.ant-select:not(.ant-select-customize-input) .ant-select-selector,
-.ant-input {
-  border-radius: 10px !important;
-}
-
-.ant-modal .ant-btn {
-  border-radius: 10px;
-}
-.ant-modal .ant-btn-primary {
-  color: #fff;
-  background: #121212;
-  border-color: #121212;
-}
-.ant-modal .ant-btn:focus,
-.ant-modal .ant-btn:hover {
-  border-color: #b33030 !important;
-  box-shadow: 0 0 0 2px rgba(179, 48, 48, 0.35) !important;
-  background: #b33030;
-  color: #fff;
-}
-
-.ant-modal .ant-btn-primary:hover,
-.ant-modal .ant-btn-primary:focus {
-  border-color: #151515 !important;
-  box-shadow: 0 0 0 2px rgb(0 0 0 / 20%) !important;
-  background: rgba(18, 18, 18, 0.9);
-}
-
-/* Input  */
-/* .ant-input:focus,
-.ant-input:hover,
-.ant-input-focused {
-  border-color: #151515 !important;
-  box-shadow: 0 0 0 2px rgb(0 0 0 / 20%) !important;
-} */
-
-/* Footer */
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer .list-unstyled,
-.footer p {
-  margin-bottom: 0;
-}
-
-.footer .list-unstyled {
-  display: flex;
-  list-style-type: none;
-  justify-content: flex-end;
-  width: 50%;
-}
-.footer .list-unstyled li {
-  flex: 0 0 50px;
-  text-align: center;
-}
-.footer .list-unstyled a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 1px solid white;
-  transition: background-color 0.4s ease-in-out;
-}
-.footer .list-unstyled a:hover {
-  background-color: #fff;
-}
-.footer a span {
-  font-size: 20px;
-  color: #fff;
-  transition: color 0.4s ease-in-out;
-}
-.footer a:hover span {
-  color: #030303;
-}
-@media screen and (max-width: 500px) {
-  .footer {
-    flex-direction: column;
-  }
-  .footer .list-unstyled {
-    padding: 0;
-    justify-content: center;
-    width: 100%;
-    margin: 1rem 0 0;
-  }
+.filter-row .filter-list {
+  margin: 0 0 1rem;
 }
